# parallel-test

./: CMakeLists.txt  README.md
src/: Parallel.cpp
